# mancala

./: Dockerfile  README.md  board.py  docker-compose.yml  game.py  human_player.py  main.py  minimax_player.py  move.py  player.py  random_player.py  requirements.txt  start.sh  test.py  utils.py
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
frontend/src/common/: types.rs
frontend/src/components/: about.rs  main_board.rs  mod.rs  not_found.rs  status.rs  top_menu.rs
frontend/src/components/atoms/: big_pit.rs  dropdown.rs  logo.rs  menu_button.rs  menu_element.rs  mod.rs  pit.rs
frontend/src/stores/: mod.rs  state_store.rs
frontend/static/: style.css
static/: new_style.css  style.css
templates/: 404.html  about.html  index.html  new_index.html
test/: test.py  test.sh  test_board.py  test_game.py
