[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewdux = "0.10.0"
stylist = { version = "0.13.0", features = ["yew"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["HtmlInputElement", "HtmlSelectElement"] }
anyhow = "1.0.86"
reqwasm = "0.5.0"
log = "0.4.14"
console_log = "1.0.0"
uuid =  { version = "1.10.0", features = ["serde"] }
